# chuk-virtual-fs

./: .coverage  .gitignore  CHANGELOG_IMPROVEMENTS.md  Makefile  PROVIDERS.md  README.md  SECURITY.md  build.md  coverage.xml  hello.py  pyproject.toml  security-report.json  virtual_fs.db
.github/workflows/: mount-tests.yml  publish.yml  release.yml  test.yml
debug/: e2b_provider_example.py  example_usage.py  s3_provider_example.py  security_example_usage.py  snapshots_example_usage.py  standalone_e2b_demo.py  tigris_bucket_creator.py
diagnostics/: check_s3_directory_markers.py  clear_entire_s3_bucket.py  clear_s3_bucket.py  list_s3_bucket.py
docs/: BINARY_FILES.md  MOUNTING.md  MOUNT_ALTERNATIVES.md  MOUNT_API_NOTES.md  MOUNT_IMPLEMENTATION.md  MOUNT_README.md  WEBDAV.md  WEBDAV_SUMMARY.md  s3_provider_analysis.md
examples/: .env.example  README.md  binary_files_example.py  e2b_provider_example.py  filesystem_provider_example.py  memory_provider_example.py  mount_demo.py  run_example.sh  s3_provider_example.py  secure_filesystem_example.py  sqlite_provider_example.py  streaming_and_mounts_example.py  validate_all_providers.py
examples/mounting/: 00_test_without_fuse.py  01_basic_mount.py  02_typescript_checker.py  03_react_component_generator.py  04_redis_persistence.py  05_isolated_build_sandbox.py  Dockerfile  README.md  docker-compose.yml  docker_mount_test.py
examples/providers/: README.md  binary_files_example.py  git_provider_example.py  google_drive_example.py  google_drive_oauth_setup.py  memory_provider_example.py  s3_provider_example.py  sqlite_provider_example.py  streaming_and_mounts_example.py
examples/webdav/: 01_basic_webdav.py  02_background_server.py  03_readonly_server.py  README.md
src/chuk_virtual_fs/: __init__.py  config.py  directory.py  exceptions.py  file.py  file_operations.py  fs_manager.py  node_base.py  node_info.py  path_resolver.py  provider_base.py  provider_factory.py  search_utils.py  security_config.py  security_wrapper.py  session_manager.py  sync_wrapper.py  template_loader.py
src/chuk_virtual_fs/adapters/: __init__.py  webdav.py
src/chuk_virtual_fs/cli/: mount_cli.py  s3_bucket_cli.py  snapshot_cli.py  snapshots-cli.md
src/chuk_virtual_fs/mount/: __init__.py  base.py  exceptions.py  fuse_adapter.py  winfsp_adapter.py
src/chuk_virtual_fs/providers/: __init__.py  e2b.py  filesystem.py  git.py  git_models.py  google_drive.py  memory.py  pyodide.py  s3.py  sqlite.py
tests/: test_e2b_provider.py  test_file.py  test_filesystem_provider.py  test_fs_manager.py  test_memory_provider.py  test_node_info.py  test_provider_consistency.py  test_providers_init.py  test_pyodide_provider.py  test_snapshot_manager.py  test_sqlite_provider.py  test_sync_wrapper.py  test_template_loader.py
tests/adapters/: test_webdav.py
tests/filesystem/: test_fs_manager.py  test_security_wrapper.py
tests/filesystem/providers/: test_s3_storage_provider.py
tests/mount/: test_mount_adapters.py
tests/providers/: test_e2b_provider_coverage.py  test_e2b_storage_provider.py  test_git_provider.py  test_google_drive_provider.py  test_memory_storage_provider.py  test_s3_provider_coverage.py  test_s3_provider_updated.py  test_sqlite_storage_provider.py
