[project]
name = "chuk-virtual-fs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.build.targets.wheel]
packages = ["chuk_virtual_fs"]

[project.scripts]
snapshot-cli = "chuk_virtual_fs.cli.snapshot_cli:main"
template-cli = "chuk_virtual_fs.cli.template_cli:main"
